Fixed dark mode bug in resume page
Fixed some coloring issues with the buttons in the resume page. They were displaying as white with black text when hovered over when it should've been the other way around for the colors.

--- a/css/desktop/resume/desktop-resume.css
+++ b/css/desktop/resume/desktop-resume.css
@@ -32,8 +32,8 @@
 }
 
 .resume-btn:hover{
-  background-color: white;
-  color: black;
+  background-color: var(--color-white);
+  color: var(--color-black);
   transition: ease 0.3s;
 }
 
